# wallthi

./: Cargo.toml  example.toml  flake.nix  rust-toolchain.toml
.github/workflows/: lint_test.yml
nix/: config.nix  home-manager.nix  options.nix
src/: main.rs
src/command/: daemon.rs  img_paths.rs  mod.rs  state.rs  status.rs  swww_control.rs
src/daemon/: mod.rs
src/dot_config/: mod.rs
src/tcp/: mod.rs
src/utils/: error.rs
